--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-client-preset": "1.0.8",
+    "apollo-boost": "^0.1.4",
+    "auth0-lock": "^11.5.2",
     "graphql": "0.13.2",
     "graphql-tag": "2.8.0",
-    "react": "16.2.0",
-    "react-apollo": "2.1.1",
-    "react-dom": "16.2.0",
-    "react-scripts": "1.1.1"
+    "react": "16.3.1",
+    "react-apollo": "2.1.3",
+    "react-dom": "16.3.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
