--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client": "cd frontend && npm start",
-    "server" : "cd server && npm start",
+    "server": "cd server && npm start",
     "start": "concurrently 'npm run client' 'npm run server'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,5 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^3.5.1"
-  }
+  },
+  "devDependencies": {}
 }
