--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "apollo-errors": "^1.8.0",
     "compression": "^1.7.2",
     "dotenv": "^5.0.1",
+    "googleapis": "^28.1.0",
     "graphql-tools": "^2.23.1",
     "graphql-yoga": "1.7.0",
     "jsonwebtoken": "^8.2.1",
