--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "googleapis": "^28.1.0",
     "graphql-tools": "^2.23.1",
     "graphql-yoga": "1.7.0",
+    "js-base64": "^2.4.3",
     "jsonwebtoken": "^8.2.1",
     "jwks-rsa": "^1.2.1",
     "mongoose": "^5.0.13"
