--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.4",
-    "auth0-lock": "^11.5.2",
+    "apollo-boost": "^0.1.6",
+    "auth0-lock": "^11.6.1",
     "graphql": "0.13.2",
-    "graphql-tag": "2.8.0",
-    "react": "16.3.1",
-    "react-apollo": "2.1.3",
-    "react-dom": "16.3.1",
+    "graphql-tag": "^2.9.2",
+    "material-ui": "^0.20.0",
+    "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
+    "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
