--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "auth0-lock": "^11.6.1",
     "graphql": "0.13.2",
     "graphql-tag": "^2.9.2",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.45",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
