--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.6",
-    "auth0-lock": "^11.6.1",
+    "@material-ui/core": "^1.2.1",
+    "apollo-boost": "^0.1.9",
+    "auth0-lock": "^11.7.2",
     "graphql": "0.13.2",
     "graphql-tag": "^2.9.2",
-    "material-ui": "^1.0.0-beta.45",
-    "react": "^16.3.2",
-    "react-apollo": "^2.1.4",
-    "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2",
+    "material-ui": "^1.0.0-beta.47",
+    "react": "^16.4.1",
+    "react-apollo": "^2.1.5",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -22,7 +23,7 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.9.1",
     "prettier-eslint": "^8.8.1"
   }
 }
