--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.1",
+    "@material-ui/icons": "^1.1.0",
     "apollo-boost": "^0.1.9",
     "auth0-lock": "^11.7.2",
     "graphql": "0.13.2",
