--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^16.4.1",
     "react-apollo": "^2.1.5",
     "react-dom": "^16.4.1",
+    "react-dropzone": "^4.2.12",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
