--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "^1.1.0",
-    "apollo-boost": "^0.1.9",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.2",
+    "apollo-link-error": "^1.1.0",
+    "apollo-link-http": "^1.5.4",
+    "apollo-upload-client": "^8.1.0",
     "auth0-lock": "^11.7.2",
     "graphql": "0.13.2",
     "graphql-tag": "^2.9.2",
